sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Add_on_Project__c.field-meta.xml
<CustomField>
    <fullName>Add_on_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Included in add on project?</label>
    <type>Checkbox</type>
</CustomField>