sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Area_Name__c.field-meta.xml
<CustomField>
    <fullName>Area_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area Name</label>
    <referenceTo>Area__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>