sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Assumed_Daily_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Daily_Expenses__c</fullName>
    <formula>IF(
OR(ISPICKVAL( Franchise_Type__c,&quot;Commercial-Residential&quot;), ISPICKVAL( Franchise_Type__c,&quot;Commercial-Open Market&quot;)), 

((Average_Users_Day_Location__c * 0.67)+ Employee_Daily_Wage__c ),0)</formula>
    <label>Assumed Daily Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>