sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Assumed_Daily_Profit__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Daily_Profit__c</fullName>
    <formula>Assumed_Daily_Revenue__c  -  Assumed_Daily_Expenses__c</formula>
    <label>Assumed Daily Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>