sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Assumed_Daily_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Daily_Revenue__c</fullName>
    <formula>IF(OR(ISPICKVAL( Franchise_Type__c,&quot;Commercial-Residential&quot;), ISPICKVAL( Franchise_Type__c,&quot;Commercial-Open Market&quot;)), Average_Users_Day_Location_OPEN__c * ((0.8383  *  Single_Use_Fee_Adults__c ) + (0.1617  *  Single_Use_Fee_Children__c )),0)</formula>
    <label>Assumed Daily Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>