sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Assumed_Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Total_Expenses__c</fullName>
    <formula>(Assumed_Daily_Expenses__c  *  ( Percent_days_open__c * Days__c))+IF( of_Toilets__c = 1,50000,IF(of_Toilets__c = 2,80000,IF(of_Toilets__c = 3,110000,IF(of_Toilets__c = 4,140000,0))))</formula>
    <label>Assumed Total Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>