sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Assumed_Total_Profit__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Total_Profit__c</fullName>
    <formula>Assumed_Total_Revenue__c  -  Assumed_Total_Expenses__c</formula>
    <label>Assumed Total Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>