sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Assumed_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Total_Revenue__c</fullName>
    <formula>Assumed_Daily_Revenue__c  * (Percent_days_open__c * Days__c)</formula>
    <label>Assumed Total Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>