sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Average_Mystery_Loo_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Mystery_Loo_Score__c</fullName>
    <formula>IF(NOT(Count_Mystery_Loo_Score__c=0),Sum_Mystery_Loo_Score__c /  Count_Mystery_Loo_Score__c, 0)</formula>
    <label>Average Mystery Loo Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>