sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Average_Users_Day_Location__c.field-meta.xml
<CustomField>
    <fullName>Average_Users_Day_Location__c</fullName>
    <formula>Average_Waste_Day__c / Waste_User_Ratio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average users/ day at the location. Includes days that the location may have been closed.</inlineHelpText>
    <label>Average Users/Day/Location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>