sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Average_Users_Day_Location_OPEN__c.field-meta.xml
<CustomField>
    <fullName>Average_Users_Day_Location_OPEN__c</fullName>
    <formula>Average_Waste_Day_OPEN__c / Waste_User_Ratio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average/ Users/ Day at the location on days that the location was open. Use this field to asses a toilet&#39;s potential on days that the toilet is open.</inlineHelpText>
    <label>Average Users/ Day/ Location - OPEN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>