sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Average_Users_Day_Toilet__c.field-meta.xml
<CustomField>
    <fullName>Average_Users_Day_Toilet__c</fullName>
    <formula>( Average_Waste_Day__c /  of_Toilets__c ) /  Waste_User_Ratio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average users at each of a location&#39;s toilets  Includes days when the toilet may have been closed.</inlineHelpText>
    <label>Average Users/Day/Toilet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>