sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Average_Users_Day_Toilet_OPEN__c.field-meta.xml
<CustomField>
    <fullName>Average_Users_Day_Toilet_OPEN__c</fullName>
    <formula>( Average_Waste_Day_OPEN__c /  of_toilets_OPEN__c ) / Waste_User_Ratio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average users/ day at each of the locations toilets. Only includes days that the toilet was open.</inlineHelpText>
    <label>Average Users/ Day/ Toilet -OPEN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>