sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Average_Users_Day_Toilet_THIS_QUARTER__c.field-meta.xml
<CustomField>
    <fullName>Average_Users_Day_Toilet_THIS_QUARTER__c</fullName>
    <formula>(Average_Waste_Day_THIS_QUARTER__c/ of_toilets_OPEN__c ) / Waste_User_Ratio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Usage/ Day/ Toilet -THIS QUARTER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>