sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Average_Waste_Day__c.field-meta.xml
<CustomField>
    <fullName>Average_Waste_Day__c</fullName>
    <label>Average Waste/Day</label>
    <summarizedField>Toilet__c.Avg_Waste_Day__c</summarizedField>
    <summaryForeignKey>Toilet__c.Location__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>