sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Average_Waste_Day_OPEN__c.field-meta.xml
<CustomField>
    <fullName>Average_Waste_Day_OPEN__c</fullName>
    <description>Average Waste/ Day on days the toilet was open</description>
    <label>Average Waste/ Day - OPEN</label>
    <summarizedField>Toilet__c.Avg_Waste_Day_OPEN__c</summarizedField>
    <summaryForeignKey>Toilet__c.Location__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>