sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Average_Waste_Day_THIS_QUARTER__c.field-meta.xml
<CustomField>
    <fullName>Average_Waste_Day_THIS_QUARTER__c</fullName>
    <description>Average waste/ day on days that the toilets were open this quarter.</description>
    <label>Average Waste/ Day- THIS QUARTER</label>
    <summarizedField>Toilet__c.Average_Waste_Day_THIS_QUARTER__c</summarizedField>
    <summaryForeignKey>Toilet__c.Location__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>