sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Avg_Uses_per_Plot_Resident_Per_day__c.field-meta.xml
<CustomField>
    <fullName>Avg_Uses_per_Plot_Resident_Per_day__c</fullName>
    <formula>Average_Users_Day_Location_OPEN__c /  Plot_Population__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Uses per Plot Resident Per day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>