sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Avg_Uses_per_student_Per_day__c.field-meta.xml
<CustomField>
    <fullName>Avg_Uses_per_student_Per_day__c</fullName>
    <formula>Average_Users_Day_Location_OPEN__c /   School_Population_with_Access_to_FLTs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average Users per Day per Location(OPEN)  divided by School Population with Access to FLTs</inlineHelpText>
    <label>Avg Uses per student Per day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>