sfSandBoxCode/force-app/main/default/objects/Location__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Google Maps Required field</description>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>