sfSandBoxCode/force-app/main/default/objects/Location__c/fields/ConOpp__c.field-meta.xml
<CustomField>
    <fullName>ConOpp__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Consumables Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>