sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Count_Mystery_Loo_Score__c.field-meta.xml
<CustomField>
    <fullName>Count_Mystery_Loo_Score__c</fullName>
    <label>Count Mystery Loo Score</label>
    <summaryFilterItems>
        <field>Field_Report__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Mystery Loo Reports, Mystery Loo- Schools</value>
    </summaryFilterItems>
    <summaryForeignKey>Field_Report__c.Location__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>