sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Google Maps Required</description>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>