sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <description>The number of days since waste was first collected at this location.</description>
    <formula>TODAY()  -  Min_Collection_Date__c</formula>
    <label>Days Since Loc Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>