sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Days_Until_Break_Even__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Break_Even__c</fullName>
    <formula>Total_Price__c /   Assumed_Daily_Profit__c</formula>
    <inlineHelpText>Total Paid/Assumed Daily Profit</inlineHelpText>
    <label>Days Until Break Even</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>