sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Distance_from_Days_Open_Target__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Days_Open_Target__c</fullName>
    <formula>Percent_days_open__c -  Target_Percent_Days_Open__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance from Days Open Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>