sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Distance_from_Target__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Target__c</fullName>
    <formula>Average_Users_Day_Toilet__c  - Usage_Target__c</formula>
    <label>Distance from Usage Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>