sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Distance_from_Target_THIS_QUARTER__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Target_THIS_QUARTER__c</fullName>
    <formula>Average_Users_Day_Toilet_THIS_QUARTER__c - Usage_Target__c</formula>
    <label>Distance from Target- THIS QUARTER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>