sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Dummy_Area__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dummy Area</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Locations (Dummy Area)</relationshipLabel>
    <relationshipName>Dummy_area</relationshipName>
    <type>Lookup</type>
</CustomField>