sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Employee_Daily_Wage__c.field-meta.xml
<CustomField>
    <fullName>Employee_Daily_Wage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estimate Employee Daily Wage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>