sfSandBoxCode/force-app/main/default/objects/Location__c/fields/FLI_Owned__c.field-meta.xml
<CustomField>
    <fullName>FLI_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If FLI now owns this Location</description>
    <inlineHelpText>If FLI now owns this Location</inlineHelpText>
    <label>FLI Owned</label>
    <type>Checkbox</type>
</CustomField>