sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Franchise_Type__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Type__c</fullName>
    <description>Type of franchise that the FLO runs.</description>
    <inlineHelpText>Type of franchise that the FLO runs. Selected by the marketing team after the toilet is launched.</inlineHelpText>
    <label>Franchise Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial-Open market</fullName>
            </value>
            <value>
                <fullName>Commercial-Residential</fullName>
            </value>
            <value>
                <fullName>Non-Commercial-Plot</fullName>
            </value>
            <value>
                <fullName>Non-Commercial-School</fullName>
            </value>
            <value>
                <fullName>Non-Commercial-Institution</fullName>
            </value>
            <value>
                <fullName>Hybrid-Institution</fullName>
            </value>
            <value>
                <fullName>Hybrid-Plot</fullName>
            </value>
            <value>
                <fullName>Hybrid-School</fullName>
            </value>
            <value>
                <fullName>Competitor Location</fullName>
            </value>
            <value>
                <fullName>Demo Toilet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>