sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Geocode_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Accuracy__c</fullName>
    <description>Google Maps Required</description>
    <label>Geocode Accuracy</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>