sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Geocode_Status__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Status__c</fullName>
    <description>Google Maps Required</description>
    <label>Geocode Status</label>
    <length>32</length>
    <type>Text</type>
</CustomField>