sfSandBoxCode/force-app/main/default/objects/Location__c/fields/GPS_Latitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_Latitude__c</fullName>
    <label>GPS Latitude</label>
    <precision>18</precision>
    <scale>14</scale>
    <type>Number</type>
</CustomField>