sfSandBoxCode/force-app/main/default/objects/Location__c/fields/GPS_Longitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_Longitude__c</fullName>
    <label>GPS Longitude</label>
    <precision>18</precision>
    <scale>14</scale>
    <type>Number</type>
</CustomField>