sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Has_Open_Opps__c.field-meta.xml
<CustomField>
    <fullName>Has_Open_Opps__c</fullName>
    <formula>IF( Open_Opportunities__c &gt;0,&quot;Yes&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Open Opps?</label>
    <type>Text</type>
</CustomField>