sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Has_the_Operator_been_trained__c.field-meta.xml
<CustomField>
    <fullName>Has_the_Operator_been_trained__c</fullName>
    <label>Has the Operator been trained?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>