sfSandBoxCode/force-app/main/default/objects/Location__c/fields/InstallSched__c.field-meta.xml
<CustomField>
    <fullName>InstallSched__c</fullName>
    <label>Opps in &quot;Installation Scheduled&quot; Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>