sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Last_FLT__c.field-meta.xml
<CustomField>
    <fullName>Last_FLT__c</fullName>
    <label>Last FLT</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>