sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Location_Assessmen__c.field-meta.xml
<CustomField>
    <fullName>Location_Assessmen__c</fullName>
    <description>Rolls up location assessment from field report</description>
    <inlineHelpText>Location assessments are done by the marketing team for commercial toilets only upon toilet launch. If a location is missing an assessment, please contact this location&#39;s marketing associate.</inlineHelpText>
    <label>Location Assessment</label>
    <summarizedField>Field_Report__c.Location_Assessment_Total_Score__c</summarizedField>
    <summaryFilterItems>
        <field>Field_Report__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Marketing Assessment v2</value>
    </summaryFilterItems>
    <summaryForeignKey>Field_Report__c.Location__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>