sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Location_Operational_Status__c.field-meta.xml
<CustomField>
    <fullName>Location_Operational_Status__c</fullName>
    <inlineHelpText>Updated Automatically. Open means all toilets are open. Closed means all toilets are closed.</inlineHelpText>
    <label>Location Operational Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>