sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Min_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Min_Collection_Date__c</fullName>
    <label>Min Collection Date</label>
    <summarizedField>Toilet__c.Min_Collection_Date__c</summarizedField>
    <summaryForeignKey>Toilet__c.Location__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>