sfSandBoxCode/force-app/main/default/objects/Location__c/fields/No_of_Open_toilets__c.field-meta.xml
<CustomField>
    <fullName>No_of_Open_toilets__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No. of toilets that are open in this location</description>
    <label>No. of Open toilets</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>