sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Number_of_Days_Open_in_a_Typical_Week__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Open_in_a_Typical_Week__c</fullName>
    <defaultValue>7</defaultValue>
    <description>Updated by field officers. Automatically set as 7 unless updated</description>
    <inlineHelpText>How many days (out of 7) is this location?</inlineHelpText>
    <label>Number of Days Open in a Typical Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>