sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <description>Count of the number of employees listed in location roles.</description>
    <label>Number of Employees</label>
    <summaryFilterItems>
        <field>Location_Roles__c.Role__c</field>
        <operation>equals</operation>
        <value>Employee</value>
    </summaryFilterItems>
    <summaryForeignKey>Location_Roles__c.Location__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>