sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Number_of_Location_Roles__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Location_Roles__c</fullName>
    <description>Counts the number of location roles on a location. Invisible to all users.</description>
    <inlineHelpText>Counts the number of location roles on a location.</inlineHelpText>
    <label>Number of Location Roles</label>
    <summaryForeignKey>Location_Roles__c.Location__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>