sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Number_of_Location_Teams__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Location_Teams__c</fullName>
    <description>Counts the number of location teams. Invisible to all users.</description>
    <inlineHelpText>Counts the number of location teams.</inlineHelpText>
    <label>Number of Location Teams</label>
    <summaryForeignKey>Location_Team__c.Location__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>