sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Number_of_potential_customers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_potential_customers__c</fullName>
    <description>Number of people who are potential customers for this toilet</description>
    <inlineHelpText>For schools &amp; plots-- number of children or inhabitants</inlineHelpText>
    <label>Number of Potential Customers</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>