sfSandBoxCode/force-app/main/default/objects/Location__c/fields/of_Toilets__c.field-meta.xml
<CustomField>
    <fullName>of_Toilets__c</fullName>
    <label># of Toilets</label>
    <summaryForeignKey>Toilet__c.Location__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>