sfSandBoxCode/force-app/main/default/objects/Location__c/fields/of_toilets_OPEN__c.field-meta.xml
<CustomField>
    <fullName>of_toilets_OPEN__c</fullName>
    <description>Count of number of toilets that are listed as open</description>
    <inlineHelpText>The number of toilets that the FLO is currently operating. To see all the toilets that were ever associated with this location, scroll down to the bottom of the page.</inlineHelpText>
    <label># of toilets - OPEN</label>
    <summaryFilterItems>
        <field>Toilet__c.Operational_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Toilet__c.Location__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>