sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunities__c</fullName>
    <description>Counts the number of opportunities linked to this location that are open.</description>
    <label>Open Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>