sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Opening_Time__c.field-meta.xml
<CustomField>
    <fullName>Opening_Time__c</fullName>
    <description>Time the toilet opens</description>
    <label>Opening Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0:00</fullName>
            </value>
            <value>
                <fullName>0:30</fullName>
            </value>
            <value>
                <fullName>1:00</fullName>
            </value>
            <value>
                <fullName>1:30</fullName>
            </value>
            <value>
                <fullName>2:00</fullName>
            </value>
            <value>
                <fullName>2:30</fullName>
            </value>
            <value>
                <fullName>3:00</fullName>
            </value>
            <value>
                <fullName>3:30</fullName>
            </value>
            <value>
                <fullName>4:00</fullName>
            </value>
            <value>
                <fullName>4:30</fullName>
            </value>
            <value>
                <fullName>5:00</fullName>
            </value>
            <value>
                <fullName>5:30</fullName>
            </value>
            <value>
                <fullName>6:00</fullName>
            </value>
            <value>
                <fullName>6:30</fullName>
            </value>
            <value>
                <fullName>7:00</fullName>
            </value>
            <value>
                <fullName>7:30</fullName>
            </value>
            <value>
                <fullName>8:00</fullName>
            </value>
            <value>
                <fullName>8:30</fullName>
            </value>
            <value>
                <fullName>9:00</fullName>
            </value>
            <value>
                <fullName>9:30</fullName>
            </value>
            <value>
                <fullName>10:00</fullName>
            </value>
            <value>
                <fullName>10:30</fullName>
            </value>
            <value>
                <fullName>11:00</fullName>
            </value>
            <value>
                <fullName>11:30</fullName>
            </value>
            <value>
                <fullName>12:00</fullName>
            </value>
            <value>
                <fullName>12:30</fullName>
            </value>
            <value>
                <fullName>13:00</fullName>
            </value>
            <value>
                <fullName>13:30</fullName>
            </value>
            <value>
                <fullName>14:00</fullName>
            </value>
            <value>
                <fullName>14:30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>