sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Operating_Hours_Notes__c.field-meta.xml
<CustomField>
    <fullName>Operating_Hours_Notes__c</fullName>
    <description>Notes related to operating hours.</description>
    <label>Operating Hours Notes</label>
    <type>TextArea</type>
</CustomField>