sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Operator_Contact__c.field-meta.xml
<CustomField>
    <fullName>Operator_Contact__c</fullName>
    <formula>Operator_Name__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operator Contact</label>
    <type>Text</type>
</CustomField>