sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Operator_Name__c.field-meta.xml
<CustomField>
    <fullName>Operator_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operator Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Locations (Operator Name)</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>