sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Percent_days_open__c.field-meta.xml
<CustomField>
    <fullName>Percent_days_open__c</fullName>
    <formula>SUM_Percent_Days_Open_del__c / of_Toilets__c</formula>
    <label>Percent of days open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>