sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Percentage_of_Population_Using_the_FLT__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Population_Using_the_FLT__c</fullName>
    <formula>CASE( TEXT(Franchise_Type__c),
&quot;Non-Commercial-Plot&quot;, Average_Users_Day_Location__c/Plot_Population__c ,
&quot;Non-Commercial-School&quot;, Average_Users_Day_Location__c/School_Population_with_Access_to_FLTs__c ,
&quot;Hybrid-Plot&quot;,  Average_Users_Day_Location__c/Plot_Population__c ,
&quot;Hybrid-School&quot;,  Average_Users_Day_Location__c/School_Population_with_Access_to_FLTs__c,  
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage of Population Using the FLT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>