sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Plot_Population__c.field-meta.xml
<CustomField>
    <fullName>Plot_Population__c</fullName>
    <label>Plot Population</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>