sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Plot_Toilet_Location__c.field-meta.xml
<CustomField>
    <fullName>Plot_Toilet_Location__c</fullName>
    <inlineHelpText>Pick an option for this field if the Franchisee Type is a plot toilet (Non Commercial Plot or Hybrid Plot)</inlineHelpText>
    <label>Plot Toilet Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inside Plot</fullName>
            </value>
            <value>
                <fullName>Outside Plot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>